feat:apply阶段已完成
